--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,10 @@
   		<artifactId>javax.json</artifactId>
   		<version>1.1.2</version>
   	</dependency>
+  	<dependency>
+  		<groupId>io.reactivex.rxjava2</groupId>
+  		<artifactId>rxjava</artifactId>
+  		<version>2.2.3</version>
+  	</dependency>
   </dependencies>
 </project>
