--- a/pom.xml
+++ b/pom.xml
@@ -3,23 +3,47 @@
   <groupId>EclipsePluginDownload</groupId>
   <artifactId>EclipsePluginDownload</artifactId>
   <version>2.0</version>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.glassfish</groupId>
+  		<artifactId>javax.json</artifactId>
+  		<version>1.1.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>io.reactivex.rxjava2</groupId>
+  		<artifactId>rxjava</artifactId>
+  		<version>2.2.3</version>
+  	</dependency>
+  	<!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
+	<dependency>
+	    <groupId>org.junit</groupId>
+	    <artifactId>junit-bom</artifactId>
+	    <version>5.5.2</version>
+	    <type>pom</type>
+	    <scope>test</scope>
+	</dependency>
+  	<dependency>
+	  <groupId>org.assertj</groupId>
+	  <artifactId>assertj-core</artifactId>
+	  <!-- use 2.9.1 for Java 7 projects -->
+	  <version>3.11.1</version>
+	  <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>com.fasterxml.uuid</groupId>
+	    <artifactId>java-uuid-generator</artifactId>
+	    <version>3.2.0</version>
+	    <scope>test</scope>
+	</dependency>
+  </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>10</source>
-          <target>10</target>
+          <source>13</source>
+          <target>13</target>
         </configuration>
       </plugin>
       <plugin>
@@ -46,16 +70,4 @@
 	    </plugin>
     </plugins>
   </build>
-  <dependencies>
-  	<dependency>
-  		<groupId>org.glassfish</groupId>
-  		<artifactId>javax.json</artifactId>
-  		<version>1.1.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>io.reactivex.rxjava2</groupId>
-  		<artifactId>rxjava</artifactId>
-  		<version>2.2.3</version>
-  	</dependency>
-  </dependencies>
 </project>
